@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-08T00:27:07Z",
+  "timestamp" : "2022-05-08T08:07:14Z",
   "count_outdated" : 10,
   "uniques_outdated" : 5,
-  "count" : 15,
-  "uniques" : 6,
+  "count" : 16,
+  "uniques" : 7,
   "views" : [
     {
       "timestamp": "2022-05-07T00:00:00Z",
@@ -11,6 +11,13 @@
       "count_minmax": [ 1, 5 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
