@@ -1,10 +1,15 @@
 {
-  "count": 5,
+  "count": 6,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 5,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
